<resources>
    <string name="app_name">KitchenOrdering</string>
    <string name="menu_logout">Logout</string>
    <string name="welcome_back">Welcome back,</string>
    <string name="please_login_to_your_account">please login \nto your account.</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="login">Login</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="kitchen_password">kitchen</string>
    <string name="kitchen_username">user@gmail.com</string>
    <string name="delete_orders">Delete orders</string>
    <string name="order">order</string>
    <string name="orders">Orders</string>
    <string name="total_price">Total price:</string>
    <string name="date_time"><![CDATA[Date & Time:]]></string>
    <string name="order_items">Order Items</string>
    <string name="select_item_user_msg">Please select an Item to make an Order!</string>
    <string name="product_already_added">You already added this product!</string>
    <string name="login_error_msg">Username or password is wrong.</string>
    <string name="count">Count:</string>
    <string name="_234234545646456">234234545646456</string>
    <string name="order_id">Order ID:</string>
    <string name="_2020_10_18_12_02">2020-10-18 12:02</string>
    <string name="no_order">No order</string>
    <string name="view_list">VIEW LIST</string>
    <string name="orders_dashboard">ORDERS</string>
    <string name="settings">SETTINGS</string>
    <string name="total">Total:</string>
    <string name="checkout">Checkout</string>
    <string name="logout">logout</string>
    <string name="_0">0</string>
    <string name="_5">5</string>
    <string name="product_name">product name</string>
    <string name="_100">100</string>
    <string name="add_to_cart">Add to cart</string>


</resources>
