<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_order"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:padding="10dp">


    <ImageView
        android:id="@+id/img_order_item"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:src="@drawable/ic_order"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/tv_order_date_time_lable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_time"
        android:textStyle="bold"
        android:layout_marginStart="5dp"
        app:layout_constraintLeft_toRightOf="@id/img_order_item"
        app:layout_constraintTop_toTopOf="@id/img_order_item"
        />
    <TextView
        android:id="@+id/tv_order_date_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2020_10_18_12_02"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryBlack"
        android:layout_marginStart="5dp"
        app:layout_constraintLeft_toRightOf="@id/tv_order_date_time_lable"
        app:layout_constraintTop_toTopOf="@id/tv_order_date_time_lable"
        app:layout_constraintBottom_toBottomOf="@id/tv_order_date_time_lable"
        />
    <TextView
        android:id="@+id/tv_order_id_lable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_id"
        android:textStyle="bold"
        android:layout_marginStart="5dp"
        app:layout_constraintLeft_toRightOf="@id/img_order_item"
        app:layout_constraintTop_toBottomOf="@+id/tv_order_date_time_lable"
        />
    <TextView
        android:id="@+id/tv_order_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:text="@string/_234234545646456"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryBlack"
        android:layout_marginStart="5dp"
        app:layout_constraintLeft_toRightOf="@id/tv_order_id_lable"
        app:layout_constraintTop_toTopOf="@id/tv_order_id_lable"
        app:layout_constraintBottom_toBottomOf="@id/tv_order_id_lable"
        />
    <TextView
        android:id="@+id/tv_order_count_lable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/count"
        android:textStyle="bold"
        android:layout_marginStart="5dp"
        app:layout_constraintLeft_toRightOf="@id/img_order_item"
        app:layout_constraintTop_toBottomOf="@+id/tv_order_id_lable"
        />

    <TextView
        android:id="@+id/tv_order_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_5"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryBlack"
        android:layout_marginStart="5dp"
        app:layout_constraintLeft_toRightOf="@id/tv_order_count_lable"
        app:layout_constraintTop_toTopOf="@id/tv_order_count_lable"
        app:layout_constraintBottom_toBottomOf="@id/tv_order_count_lable"
        />

    <TextView
        android:id="@+id/tv_order_total_price_lable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_price"
        android:layout_marginRight="2dp"
        android:textColor="@color/colorPrimaryBlack"
        app:layout_constraintRight_toLeftOf="@id/tv_order_item_total_price"
        app:layout_constraintTop_toTopOf="@id/tv_order_item_total_price"
        app:layout_constraintBottom_toBottomOf="@id/tv_order_item_total_price"/>

    <TextView
        android:id="@+id/tv_order_item_total_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="100 "
        android:textSize="16sp"
        android:textColor="@color/colorBlack"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toStartOf="@id/img_order_euro"
        app:layout_constraintTop_toTopOf="@+id/img_order_euro"
        app:layout_constraintBottom_toBottomOf="@+id/img_order_euro"/>
    <ImageView
        android:id="@+id/img_order_euro"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:src="@drawable/ic_euro"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_order_count_lable"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGray"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toBottomOf="@id/img_order_euro"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
