<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/img_kitchen_logo"
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:layout_marginTop="60dp"
        android:scaleType="centerCrop"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:id="@+id/img_viewlist_background"
            android:layout_width="130dp"
            android:layout_height="170dp"
            android:background="@drawable/border_viewlist"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/img_view_list"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_view_list"
            app:layout_constraintBottom_toBottomOf="@id/img_viewlist_background"
            app:layout_constraintLeft_toLeftOf="@id/img_viewlist_background"
            app:layout_constraintRight_toRightOf="@id/img_viewlist_background"
            app:layout_constraintTop_toTopOf="@id/img_viewlist_background" />

        <TextView
            android:id="@+id/tv_view_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_list"
            app:layout_constraintLeft_toLeftOf="@+id/img_view_list"
            app:layout_constraintRight_toRightOf="@+id/img_view_list"
            app:layout_constraintTop_toBottomOf="@+id/img_view_list" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/img_orders_background"
            android:layout_width="150dp"
            android:layout_height="83dp"
            android:layout_marginLeft="4dp"
            android:background="@drawable/border_orders"
            app:layout_constraintLeft_toRightOf="@id/img_viewlist_background"
            app:layout_constraintTop_toTopOf="@id/img_viewlist_background">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/img_order"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_shopping_cart"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/tv_order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/orders_dashboard"
                    android:textColor="@color/colorPrimaryBlack"
                    app:layout_constraintBottom_toBottomOf="@+id/img_order"
                    app:layout_constraintLeft_toRightOf="@+id/img_order"
                    app:layout_constraintTop_toTopOf="@id/img_order" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/img_settings_background"
            android:layout_width="150dp"
            android:layout_height="83dp"
            android:layout_marginLeft="4dp"
            android:background="@drawable/border_orders"
            app:layout_constraintBottom_toBottomOf="@id/img_viewlist_background"
            app:layout_constraintLeft_toRightOf="@id/img_viewlist_background">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/img_settings"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_setting"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/tv_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings"
                    android:textColor="@color/colorPrimaryBlack"
                    app:layout_constraintBottom_toBottomOf="@+id/img_settings"
                    app:layout_constraintLeft_toRightOf="@+id/img_settings"
                    app:layout_constraintTop_toTopOf="@id/img_settings" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>